# cc-py-setup

./: README.rst  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  LICENSE  README.rst  setup.cfg  setup.py  tox.ini  {{cookiecutter.project_name|replace(' ', '')}}.mm  {{cookiecutter.project_name}}.mm
{{cookiecutter.repo_name}}/ci/: bootstrap.py
{{cookiecutter.repo_name}}/ci/templates/: tox.ini
{{cookiecutter.repo_name}}/docs/: installation.rst
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py  cli.py  {{cookiecutter.package_name}}.py
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __init__.py  __main__.py  cli.py  {{cookiecutter.package_name}}.py
